Fixed spacing on dymanic page

--- a/src/components/ModeCard/ModeCard.module.css
+++ b/src/components/ModeCard/ModeCard.module.css
@@ -62,6 +62,7 @@
   font-family: "SpotifyMedium";
   text-transform: capitalize;
   text-decoration: none;
+  cursor: pointer;
 
   background-color: #19720b;
   border-color: #19720b;
